--- a/resources/js/scss/_layout.scss
+++ b/resources/js/scss/_layout.scss
@@ -1,9 +1,9 @@
 // Định nghĩa các biến màu
 $dark-slate: #293541; // Xanh đen
-$primary-orange: #FFA500; // Màu cam chủ đạo
-$secondary-orange: #FF4500; // Màu cam đậm (dùng cho các điểm nhấn)
-$light-orange: #FFB84D; // Màu cam sáng
-$white: #FFFFFF; // Màu trắng
+$primary-orange: #ffa500; // Màu cam chủ đạo
+$secondary-orange: #ff4500; // Màu cam đậm (dùng cho các điểm nhấn)
+$light-orange: #ffb84d; // Màu cam sáng
+$white: #ffffff; // Màu trắng
 
 .navbar {
     width: 100%;
@@ -125,19 +125,17 @@ $white: #FFFFFF; // Màu trắng
 }
 
 #wrapper.toggled {
-	padding-left: 250px;
+    padding-left: 250px;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-	width: 250px;
+    width: 250px;
 }
 
 #wrapper.toggled #page-content-wrapper {
-	position: absolute;
-	margin-right: -250px;
+    position: absolute;
+    margin-right: -250px;
 }
-
-
 
 // Media Queries
 @media (min-width: 768px) {
@@ -153,18 +151,18 @@ $white: #FFFFFF; // Màu trắng
         }
     }
 
-	#wrapper.toggled {
-		padding-left: 0;
-	}
+    #wrapper.toggled {
+        padding-left: 0;
+    }
 
-	#wrapper.toggled #sidebar-wrapper {
-		width: 0;
-	}
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
 
-	#wrapper.toggled #page-content-wrapper {
-		position: relative;
-		margin-right: 0;
-	}
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
 }
 
 @media (min-width: 991px) {
